完善：细节